[project]
name = "aprspy"
version = "0.1.0"
description = "APRS packet parser for Python"
authors = [
    {name = "Andy Smith",email = "andy@nsnw.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "geopy (>=2.4.1,<3.0.0)",
    "bitstring (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.9.0"
poetry-plugin-shell = "^1.0.1"
mock = "^5.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
rstvalidator = "^2020.12.3"

